my-nginx-ingress/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-ingress-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: my-nginx-ingress
